update question and media routes
