# server/src/types/quest.ts
@@ -1,15 +1,16 @@
 export interface CreateQuestMatchWordsData {
 	type: 'MATCH_WORDS';
 	levelId: number;
-	word: string;
-	translate: string;
+	data: Array<{
+		word: string;
+		translate: string;
+	}>;
 }
 
 export interface CreateQuestDictationData {
 	type: 'DICTATION';
 	levelId: number;
 	correctSentence: string;
-	correctWords: string[];
 	distractorWords?: string[];
 }
 
@@ -18,7 +19,6 @@ export interface CreateQuestTranslateData {
 	levelId: number;
 	sourceSentence: string;
 	correctSentence: string;
-	correctWords: string[];
 	distractorWords?: string[];
 }
 
